--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,17 @@
 <html lang="es">
 
 <head>
-    <!-- Google Tag Manager a lo r-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79086406-7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-79086406-7');
+    </script>
+    <!-- End Global site tag (gtag.js) - Google Analytics -->
+    <!-- Google Tag Manager-->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
