Agregando GGL Form
Se agrego GGL Form para contacto.

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79086406-7"></script>
@@ -415,7 +414,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
-                    <h2>$19.990</h2><h3>mes</h3>
+                    <h2>$19.990</h2><h3>mensual</h3>
                     <hr class="colored">
                     <p>Oferta limitada | No incluye IVA | Sin obligaciones | No se necesita tarjeta de credito.</p>
                     <a class="btn btn-outline-lightx page-scroll" href="#contact">Conversemos</a>
@@ -698,7 +697,8 @@
             </div>
             <div class="row content-row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form name="sentMessage" id="contactForm" novalidate>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4HaJolDcq5es0xsbYAyEkizHvwVdEoU0PC8sDg4YnLaCW0Q/viewform?embedded=true" width="100%" height="1100" frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+                    <!--<form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Nombre</label>
@@ -736,7 +736,7 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
     <a href="#contact" class="btn btn-block btn-full-width page-scroll">Si tienes dudas, escríbenos!</a>
