--- a/www/index.html
+++ b/www/index.html
@@ -659,40 +659,13 @@
             </div>
         </div>
     </section> -->
-    <section class="cta-form bg-dark">
-        <div class="container text-center">
-            <h3>Suscribete a nuestro newsletter!</h3>
-            <hr class="colored">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- MailChimp Signup Form -->
-                    <div id="mc_embed_signup">
-                        <!-- Replace the form action in the line below with your MailChimp embed action! For more informatin on how to do this please visit the Docs! -->
-                        <form role="form" action="//startbootstrap.us3.list-manage.com/subscribe/post?u=531af730d8629808bd96cf489&amp;id=afb284632f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-                            <div class="input-group input-group-lg">
-                                <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Agrega tu Email...">
-                                <span class="input-group-btn">
-                                    <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">Suscribete!</button>
-                                </span>
-                            </div>
-                            <div id="mce-responses">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- End MailChimp Signup Form -->
-                </div>
-            </div>
-        </div>
-    </section>
     <section id="contact">
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Contáctanos</h2>
                     <hr class="colored">
-                    <p>Nos encantaría saber acerca de tu negocio! Envíanos un mensaje para ayudarte!.</p>
+                    <p>Nos encantaría saber acerca de tu negocio! Envíanos un mensaje para ayudarte!</p>
                 </div>
             </div>
             <div class="row content-row">
