--- a/www/index.html
+++ b/www/index.html
@@ -181,7 +181,7 @@
                 <div class="col-md-6 text-center">
                     <h1>Pago Online</h1>
                     <hr class="colored">
-                    <p>(Opcional) Tus clientes pueden dejar pagado el servicio o producto de inmediato, con la comodidad del pago en linea a travez de Transbank con tarjetas bancarias de Debito o Credito.</p>
+                    <p>(Opcional) Tus clientes pueden dejar pagado el servicio o producto de inmediato, con la comodidad del pago en linea a travéz de Transbank con tarjetas bancarias de Débito o Crédito.</p>
                 </div>
             </div>
         </div>
@@ -235,7 +235,7 @@
                     <div class="about-content">
                         <i class="fa fa-whatsapp fa-4x"></i>
                         <h3>Movilidad</h3>
-                        <p>97% de los usuarios de smartphone ocupa su móvil para  chatear. Todo lo que sea móvil y accesible va a tener una buena repercusión en el recuerdo de los usuarios.</p>
+                        <p>97% de los usuarios de smartphone ocupa su móvil para  chatear. Todo lo que sea móvil y accesible va a tener una buena repercusión en el recuerdo de tus clientes.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
@@ -249,7 +249,7 @@
                     <div class="about-content">
                         <i class="fa fa-usd fa-4x"></i>
                         <h3>Costo vs Beneficios</h3>
-                        <p>Es barato, eficiente e intuitivo. Inspira y mejora la experiencia de tus usuarios y de pasada dejas de perder tiempo y dinero agendando citas o vendiendo tus productos premium!</p>
+                        <p>Es barato, eficiente e intuitivo. Inspira y mejora la experiencia de tus usuarios y de pasada dejas de perder tiempo y dinero agendando citas o vendiendo tus productos estandar por teléfono!</p>
                     </div>
                 </div>
             </div>
