Agregando meta descriptions

--- a/www/index.html
+++ b/www/index.html
@@ -20,11 +20,17 @@
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="Asistente de ventas y reservas automáticas para pequeñas empresas">
+    <meta name="description" content="Tus clientes escriben en tu página de Facebook o Whatsapp y el asistente responde en cuestión de segundos.">
     <meta name="author" content="">
     <meta name="google-site-verification" content="XPj2pILUkXlakVhR9Xl_A6yuLNxtxzuA1bh7hb9y-eg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Asistente de ventas y reservas automáticas para pequeñas empresas" />
+    <meta property="og:description" content="Tus clientes escriben en tu página de Facebook o Whatsapp y el asistente responde en cuestión de segundos." />
+    <meta property="og:url" content="https://pagobot.cl/" />
+    <meta property="og:site_name" content="PagoBot" />
+    <meta property="og:image" content="https://pagobot.cl/assets/img/chat_pagobot.png" />
+    <meta property="og:image:secure_url" content="https://pagobot.cl/assets/img/chat_pagobot.png" />
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
-    <script src="https://use.fontawesome.com/9560c7f9e9.js"></script>
     <title>PagoBot | Asistente de ventas y reservas automáticas para pequeñas empresas</title>
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -923,6 +929,8 @@
             </div>
         </div>
     </div> -->
+    <!--Font Awesome-->
+    <script src="https://use.fontawesome.com/9560c7f9e9.js"></script>
     <!-- Core Scripts -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
