--- a/www/index.html
+++ b/www/index.html
@@ -20,12 +20,12 @@
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="Tus clientes escriben en tu página de Facebook o Whatsapp y el asistente responde en cuestión de segundos.">
+    <meta name="description" content="Tus clientes escriben en tu página de Facebook o Whatsapp y el asistente responde en cuestión de segundos para vender un producto o agendar una cita.">
     <meta name="author" content="">
     <meta name="google-site-verification" content="XPj2pILUkXlakVhR9Xl_A6yuLNxtxzuA1bh7hb9y-eg" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Asistente de ventas y reservas automáticas para pequeñas empresas" />
-    <meta property="og:description" content="Tus clientes escriben en tu página de Facebook o Whatsapp y el asistente responde en cuestión de segundos." />
+    <meta property="og:description" content="Tus clientes escriben en tu página de Facebook o Whatsapp y el asistente responde en cuestión de segundos para vender un producto o agendar una cita." />
     <meta property="og:url" content="https://pagobot.cl/" />
     <meta property="og:site_name" content="PagoBot" />
     <meta property="og:image" content="https://pagobot.cl/assets/img/chat_pagobot.png" />
