--- a/www/index.html
+++ b/www/index.html
@@ -163,7 +163,7 @@
                 <div class="col-md-6 text-center">
                     <h1>Pago Online</h1>
                     <hr class="colored">
-                    <p>(Opcional) Tus clientes pueden dejar pagado el servicio o producto de inmediato, con la comodidad del pago en linea a travéz de Transbank con tarjetas bancarias de Débito o Crédito.</p>
+                    <p>(Opcional) Tus clientes pueden dejar pagado el servicio o producto de inmediato, con la comodidad del pago en linea a través de Transbank con tarjetas bancarias de Débito o Crédito.</p>
                 </div>
             </div>
         </div>
