--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 
       gtag('config', 'UA-79086406-7');
     </script>
-    <!-- End Global site tag (gtag.js) - Google Analytics -->
+    <!-- End fin Global site tag (gtag.js) - Google Analytics -->
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -187,7 +187,7 @@
                 <div class="col-md-6 text-center">
                     <h1>Pago Online</h1>
                     <hr class="colored">
-                    <p>(Opcional) Tus clientes pueden dejar pagado el servicio o producto de inmediato, con la comodidad del pago en linea a travéz de Transbank con tarjetas bancarias de Débito o Crédito.</p>
+                    <p>(Opcional) Tus clientes pueden dejar pagado el servicio o producto de inmediato, con la comodidad del pago en linea a través de Transbank con tarjetas bancarias de Débito o Crédito.</p>
                 </div>
             </div>
         </div>
